Added the logout function.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Shopping</a>
+      <a class="navbar-brand" id="title">Shopping</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,7 +17,7 @@
             </a>
           </li>
           <li id="logout" class="nav-item" routerLinkActive="active">
-            <a class="nav-link disabled">
+            <a class="nav-link disabled" (click)="logout()">
               Logout
             </a>
           </li>
